--- a/package.json
+++ b/package.json
@@ -5,11 +5,14 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
-    "dev": "jest --watch"
+    "dev": "jest --watch",
+    "weather": "ts-node src/index.ts"
   },
   "author": "Seongmin Jeong",
   "license": "ISC",
   "devDependencies": {
+    "@types/config": "0.0.35",
+    "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.20",
     "@types/node": "^12.11.7",
     "@types/sinon": "^7.5.0",
@@ -24,6 +27,9 @@
     "typescript": "^3.6.4"
   },
   "dependencies": {
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "commander": "^3.0.2",
+    "config": "^3.2.4",
+    "inquirer": "^7.0.0"
   }
 }
