--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "author": "Seongmin Jeong",
   "license": "ISC",
   "devDependencies": {
+    "@types/chalk-animation": "^1.6.0",
+    "@types/common-tags": "^1.8.0",
     "@types/config": "0.0.35",
     "@types/inquirer": "^6.5.0",
     "@types/jest": "^24.0.20",
@@ -28,7 +30,10 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chalk": "^2.4.2",
+    "chalk-animation": "^1.6.0",
     "commander": "^3.0.2",
+    "common-tags": "^1.8.0",
     "config": "^3.2.4",
     "inquirer": "^7.0.0"
   }
