--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
-  "name": "Weather CLI",
+  "name": "weather-cli",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
+  "install": "npm run build",
+  "bin": {
+    "weather-cli": "./dist/index.js"
+  },
   "scripts": {
     "build": "tsc",
     "dev": "jest --watch",
-    "weather": "ts-node src/index.ts"
+    "weather-cli": "ts-node src/index.ts"
   },
   "author": "Seongmin Jeong",
   "license": "ISC",
